<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab4</string>
    <string name="play_local_media">Play Local Media</string>
    <string name="download_media">Download Media</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="select_file">Select File</string>
    <string name="audio_file">Audio File</string>
    <string name="video_file">Video File</string>
    <string name="download_url">Enter URL to download</string>
    <string name="download">Download</string>
    <string name="file_downloaded">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="please_select_file">Please select a file first</string>
    <string name="file_selected">File selected: %1$s</string>

    <!-- Нові рядки для виправлення помилок -->
    <string name="downloading">Downloading…</string>
    <string name="downloading_percent">Downloading: %1$d%%</string>
    <string name="download_completed">Download completed</string>
    <string name="download_paused">Download paused</string>
    <string name="download_pending">Download pending</string>
    <string name="no_file_downloaded">No file downloaded</string>
    <string name="failed_create_dir">Failed to create download directory</string>
    <string name="please_enter_url">Please enter a URL</string>
    <string name="downloading_media">Downloading media file</string>
    <string name="file_not_found">File not found</string>

</resources>
